# problem-human-powered-aircraft

./: Dockerfile  LICENSE  Makefile.tmp  README.md  README.md.tmp  environ.tmp  pyproject.toml  requirements.txt  tox.ini.tmp
.github/workflows/: docker-build-push.yaml.tmp  python-format-check-test.yaml.tmp
problem/: main.py
problem_human_powered_aircraft/: main.py  make_problem_instance.py
problem_human_powered_aircraft/function/: hpa101-0.pickle  hpa101-1.pickle  hpa101-2.pickle  hpa102-0.pickle  hpa102-1.pickle  hpa102-2.pickle  hpa103-0.pickle  hpa103-1.pickle  hpa103-2.pickle  hpa131-0.pickle  hpa131-1.pickle  hpa131-2.pickle  hpa142-0.pickle  hpa142-1.pickle  hpa142-2.pickle  hpa143-0.pickle  hpa143-1.pickle  hpa143-2.pickle  hpa201-0.pickle  hpa201-1.pickle  hpa201-2.pickle  hpa202-0.pickle  hpa202-1.pickle  hpa202-2.pickle  hpa203-0.pickle  hpa203-1.pickle  hpa203-2.pickle  hpa204-0.pickle  hpa204-1.pickle  hpa204-2.pickle  hpa205-0.pickle  hpa205-1.pickle  hpa205-2.pickle  hpa222-0.pickle  hpa222-1.pickle  hpa222-2.pickle  hpa233-0.pickle  hpa233-1.pickle  hpa233-2.pickle  hpa241-0.pickle  (+80 more)
tests/: conftest.py  test_main.py
