# 参考: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#a-full-example

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "problem-awesome-problem" # [要上書き] ここに問題名/リポジトリ名を書く
version = "0.0.1"
dependencies = [
    "jsonschema",
    "click",
] # [要上書き] ここに依存パッケージを追加する
requires-python = ">=3.11" # [要上書き] ここにPythonのバージョンを書く
authors = [
    {name = "Hoge", email = "hogehoge@email.com"},
    {name = "Fuga", email = "fugafuga@univ.ac.jp"},
] # [要上書き] ここに著者情報を書く
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://ec-comp.jpnsec.org/problems/awesome-problem" # [要上書き] ここにOpthubの問題ページURLを書く
Repository = "https://github.com/opthub-org/problem-awesome-problem" # [要上書き] ここにリポジトリURLを書く

# 開発用の設定
[project.optional-dependencies]
dev = [
    "pytest",
    "pyproject-flake8",
    "mypy",
    "black",
    "isort"
]

[tools.black]
line-length = 100

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 100
