# 参考: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#a-full-example

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "problem-human-powered-aircraft" # MUST edit here to problem / repository name
version = "0.0.1"
dependencies = [
    "jsonschema",
    "click",
    "PyYAML",
    "matplotlib"
    "numpy"
    "openpyxl"
    "pandas"
    "scipy"
] # MUST add dependencies for your program
requires-python = ">=3.8" # SHOULD edit required python version for your program
authors = [
    {name = "Nobuo Namura", email = "nobuo.namura.gp@gmail.com"},
] # SHOULD edit your author information
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://ec-comp.jpnsec.org/problems/human-powered-aircraft" # SHOULD edit problem wab page URL in OptHub
Repository = "https://github.com/opthub-org/problem-human-powered-aircraft" # SHOULD edit repository URL

# 開発用の設定
[project.optional-dependencies]
dev = [
    "pytest",
    "pyproject-flake8",
    "mypy >= 0.900",
    "black",
    "isort"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
exclude = [".venv", "tests", "build"]

[tool.mypy]
exclude = [".venv", "tests", "build"]
